fixed nav-collapse & font size when .576px

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ html, body {
   color: #040b99;
 }
 .navbar {
-  padding: .8rem;
+  padding: 0.8rem;
 }
 .navbar-nav li {
   padding-right: 20px;
 }
 .nav-link{
-  font-size: 1.4em !important;
+  font-size: 1.3em !important;
 }
 .carousel-inner img{
   width: 100%;
@@ -74,17 +74,20 @@ html, body {
 
 }
 @media(max-width:576px) {
-  .carousel-caption h1 {
-    font-size: 250%;
+.carousel-caption h1 {
+  font-size: 250%;
   }
-  .carousel-caption .btn {
-    font-size: 90%;
-    padding: 4px 8px;
+.carousel-caption .btn {
+  font-size: 90%;
+  padding: 4px 8px;
   }
-  .carousel-indicators {
-    display: none;
+.carousel-indicators {
+  display: none;
   }
-
+.nav-link{
+  font-size: 0.8em !important;
+  }
+}
 }
 
 /* FIREFOX BUF FIX */
